# sloppy-labwork

./: .gitignore  CLAUDE.md  Dockerfile  Procfile  README.md  docker-compose.yml  environment.yml  manage.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
common/: auth.py  middleware.py  social_accounts.py  urls.py  utils.py  views.py
config/: gunicorn.conf.py  nginx.conf.erb
deck_simulator/: admin.py  apps.py  models.py  urls.py  views.py
decks/: admin.py  models.py  urls.py  views.py
lineups/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
local/: register-tournaments-removal-followup.md
pmc/: CLAUDE.md  admin.py  apps.py  context_processors.py  forms.py  models.py  tests.py  urls.py  views.py
posts/: admin.py  models.py  urls.py  views.py
ratings/: urls.py  views.py
redacted/: apps.py  forms.py  urls.py  views.py
register/: admin.py  forms.py  models.py  urls.py  views.py
sloppy_labwork/: asgi.py  context_processors.py  hosts.py  local_environment.py-example  settings.py  urls.py  utils.py  views.py  wsgi.py
spangler_box/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
static/: manifest.json
staticfiles/: staticfiles.json
templates/: 403.html  footer.html  nav-top.html  page-contact.html  page-full.html  page-home.html  page-profile.html  page-team.html  page.html  styles-demo.html
timekeeper/: apps.py  forms.py  models.py  urls.py  views.py
tournaments/: admin.py  forms.py  models.py  urls.py  views.py
tourney/: CLAUDE.md  admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
(+411 files in other folders)
